fixed footer flex wrap

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,14 +35,16 @@ section {
     align-items: baseline;
     background-color:rgb(253, 204, 204);
     display: flex;
-    flex-basis: 18em;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .location, .connect, .hours {
-    flex: 1 1 45%;
-    gap: 2em;
+    flex-basis: 25em;
     line-height: 1.6;
-    margin: 4em 0 1em 0;
+    margin-top: 4em;
+    padding-bottom: 2.5em;
+
 }
 
 .navigation {
@@ -56,19 +58,11 @@ section {
 
 @media all and (max-width: 44em) {
     header h1 {
-        text-shadow: 1px 1px #9d3c72;
+        text-shadow: 0 1px #9d3c72;
     }
     
     section p {
         padding: 0 1em;
-    }
-    
-    #contact {
-        flex-wrap: wrap;
-    }
-
-    .location, .connect, .hours {
-        flex-basis: 80em;
     }
 }
 
